# mycroft-dinkum

./: .gitignore  README.md  mypy.ini  pylintrc  setup.cfg
plugins/hotword_precise/: MANIFEST.in  README.md  setup.cfg  setup.py
plugins/stt_coqui/: README.md  requirements.txt  setup.py
plugins/stt_grokotron/: README.md  setup.py
plugins/stt_vosk/: README.md  setup.py
scripts/: check-code.sh  generate-systemd-units.py  generate-systemd-units.sh  install-service-plugin.sh  install-service.sh  install-skill.sh  run-service.sh  run-skill.sh  with-service-venv.sh
services/gui/mycroft-gui-mark-2/: CMakeLists.txt  README.md
services/gui/mycroft-gui-mark-2/containments/mark2/: CMakeLists.txt
services/gui/mycroft-gui-mark-2/containments/mark2/package/contents/config/: main.xml
services/gui/mycroft-gui-mark-2/containments/mark2/package/contents/ui/: ListenerAnimation.qml  NetworkingLoader.qml  main.qml
services/gui/mycroft-gui-mark-2/containments/mark2/package/contents/ui/networking/: Connecting.qml  Fail.qml  FailPassword.qml  SelectNetwork.qml  Success.qml
services/gui/mycroft-gui-mark-2/containments/mark2/package/contents/ui/osd/: SliderControl.qml  VolumeOSD.qml
services/gui/mycroft-gui-mark-2/containments/mark2/package/contents/ui/panel/: SlidingPanel.qml
services/gui/mycroft-gui-mark-2/containments/mark2/package/contents/ui/panel/quicksettings/: AdditionalSettingsDelegate.qml  AudioRestartDelegate.qml  BrightnessSlider.qml  Delegate.qml  HomeDelegate.qml  MicrophoneDelegate.qml  MuteDelegate.qml  QuickSettings.qml  RebootDelegate.qml  ShutdownDelegate.qml  SliderBase.qml  VolumeSlider.qml  VolumeSliderPulseAudio.qml  WirelessDelegate.qml
services/gui/mycroft-gui-mark-2/containments/mark2/plugin/: CMakeLists.txt  mark2systemaccess.cpp  mark2systemaccess.h  mark2systemaccessplugin.cpp  mark2systemaccessplugin.h  qmldir
services/gui/mycroft-gui-mark-2/icons/: CMakeLists.txt  index.theme  readme.txt
services/gui/mycroft-gui-mark-2/lookandfeel/contents/: defaults
services/gui/mycroft-gui-mark-2/lookandfeel/contents/layouts/: org.kde.plasma.nano-layout.js
services/gui/mycroft-gui-mark-2/lookandfeel/contents/plasmoidsetupscripts/: org.kde.mycroft.mark2.js
services/gui/mycroft-gui-mark-2/lookandfeel/contents/splash/: Splash.qml  thinking.json
shared/: setup.py
shared/requirements/: requirements.txt  requirements_dev.txt
skills/alarm.mark2/: __init__.py  requirements.txt
skills/camera.mark2/: README.md  __init__.py
skills/date.mark2/: .gitignore  __init__.py
skills/date.mycroftai/: README.md  __init__.py
skills/deako.mark2/: __init__.py  device_browser.py  requirements.txt
test/: install.sh  run-skill-tests.sh
(+4975 files in other folders)
